Cambios nuevos.
Tests refactorizados, fallan 10 de 130, crear nuevo usuario y que salgan sus respectivos datos si es cliente o trabajador hecho, algún estilo tocado.