@@ -8,41 +8,41 @@ import examen.dev.tfgalmacen.rest.pedido.dto.CompraRequest;
 import examen.dev.tfgalmacen.rest.pedido.dto.PedidoResponse;
 import examen.dev.tfgalmacen.rest.pedido.models.EstadoPedido;
 import examen.dev.tfgalmacen.rest.pedido.service.PedidoService;
+import examen.dev.tfgalmacen.storage.service.StorageService;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
 import org.springframework.http.MediaType;
-import org.springframework.http.ResponseEntity;
 import org.springframework.mock.web.MockMultipartFile;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 
 import java.time.LocalDateTime;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.List;
-import java.util.NoSuchElementException;
+import java.util.*;
 
-import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
-
 
 class ClienteControllerTest {
 
     @Mock
     private ClienteService clienteService;
 
-    @InjectMocks
-    private ClienteController clienteController;
-
     @Mock
     private PedidoService pedidoService;
 
+    @Mock
+    private StorageService storageService;
+
+    @InjectMocks
+    private ClienteController clienteController;
+
     private MockMvc mockMvc;
+    private ObjectMapper mapper = new ObjectMapper();
 
     @BeforeEach
     void setUp() {
@@ -51,14 +51,14 @@ class ClienteControllerTest {
     }
 
     @Test
-    void testGetAllClientes() throws Exception {
+    void testGetAllClientes() {
         List<ClienteResponse> clientes = List.of(
                 new ClienteResponse(1L, 2L, "12345678A", "dni.jpg", "Calle A")
         );
 
         when(clienteService.getAllClientes()).thenReturn(clientes);
 
-        ResponseEntity<List<ClienteResponse>> response = clienteController.getAllClientes();
+        var response = clienteController.getAllClientes();
 
         assertEquals(200, response.getStatusCodeValue());
         assertEquals(1, response.getBody().size());
@@ -66,11 +66,11 @@ class ClienteControllerTest {
     }
 
     @Test
-    void testGetClienteById() throws Exception {
+    void testGetClienteById() {
         ClienteResponse cliente = new ClienteResponse(1L, 2L, "12345678A", "dni.jpg", "Calle A");
         when(clienteService.getById(1L)).thenReturn(cliente);
 
-        ResponseEntity<ClienteResponse> response = clienteController.getClienteById(1L);
+        var response = clienteController.getClienteById(1L);
 
         assertEquals(200, response.getStatusCodeValue());
         assertEquals("12345678A", response.getBody().getDni());
@@ -78,12 +78,11 @@ class ClienteControllerTest {
     }
 
     @Test
-    void testGetClienteByIdNotFound() throws Exception {
+    void testGetClienteByIdNotFound() {
         when(clienteService.getById(99L)).thenThrow(new NoSuchElementException("Cliente no encontrado"));
 
-        NoSuchElementException exception = assertThrows(NoSuchElementException.class, () -> {
-            clienteController.getClienteById(99L);
-        });
+        var exception = assertThrows(NoSuchElementException.class,
+                () -> clienteController.getClienteById(99L));
 
         assertEquals("Cliente no encontrado", exception.getMessage());
         verify(clienteService).getById(99L);
@@ -91,72 +90,74 @@ class ClienteControllerTest {
 
     @Test
     void testCreateCliente() throws Exception {
-        ClienteRequest request = new ClienteRequest(null, "12345678Z", "foto.jpg", "Calle Nueva");
-        ClienteResponse responseMock = new ClienteResponse(2L, 3L, "12345678Z", "foto.jpg", "Calle Nueva"); // 3L = userId
+
+        ClienteRequest request = new ClienteRequest(null, "12345678Z", null, "Calle Nueva");
+        ClienteResponse responseMock = new ClienteResponse(2L, 3L, "12345678Z", "imagenGuardada.jpg", "Calle Nueva");
 
         MockMultipartFile clienteFile = new MockMultipartFile(
                 "cliente",
                 "cliente",
                 "application/json",
-                new ObjectMapper().writeValueAsBytes(request)
+                mapper.writeValueAsBytes(request)
         );
 
         MockMultipartFile fotoDniFile = new MockMultipartFile(
                 "fotoDni",
-                "fotoDni.jpg",
+                "dni.jpg",
                 "image/jpeg",
-                new byte[0]
+                "testdata".getBytes() // archivo con contenido → NO empty
         );
 
-        when(clienteService.createCliente(any(ClienteRequest.class))).thenReturn(responseMock);
+        when(storageService.store(any())).thenReturn("imagenGuardada.jpg");
+        when(clienteService.createCliente(any())).thenReturn(responseMock);
 
         mockMvc.perform(multipart("/api/clientes/create")
                         .file(clienteFile)
                         .file(fotoDniFile))
                 .andExpect(status().isCreated())
-                .andExpect(jsonPath("$.dni").value("12345678Z"));
+                .andExpect(jsonPath("$.dni").value("12345678Z"))
+                .andExpect(jsonPath("$.fotoDni").value("imagenGuardada.jpg"));
 
-        verify(clienteService).createCliente(any(ClienteRequest.class));
+        verify(storageService).store(any());
+        verify(clienteService).createCliente(any());
     }
 
     @Test
     void testUpdateClienteOk() throws Exception {
-        ClienteRequest request = new ClienteRequest(4L, "87654321B", "foto2.jpg", "Calle B");
-        ClienteResponse responseMock = new ClienteResponse(1L, 4L, "87654321B", "foto2.jpg", "Calle B");
+
+        ClienteRequest request = new ClienteRequest(4L, "87654321B", null, "Calle B");
+        ClienteResponse responseMock = new ClienteResponse(1L, 4L, "87654321B", "fotoActualizada.jpg", "Calle B");
 
         MockMultipartFile clienteFile = new MockMultipartFile(
                 "cliente", "cliente.json", "application/json",
-                new ObjectMapper().writeValueAsBytes(request)
+                mapper.writeValueAsBytes(request)
         );
 
         MockMultipartFile fotoDniFile = new MockMultipartFile(
-                "fotoDni", "foto2Dni.jpg", "image/jpeg", new byte[0]
+                "fotoDni", "dniNuevo.jpg", "image/jpeg", "x".getBytes()
         );
 
-        when(clienteService.updateCliente(eq(1L), any(ClienteRequest.class))).thenReturn(responseMock);
+        when(storageService.store(any())).thenReturn("fotoActualizada.jpg");
+        when(clienteService.updateCliente(eq(1L), any())).thenReturn(responseMock);
 
         mockMvc.perform(multipart("/api/clientes/{id}", 1L)
                         .file(clienteFile)
                         .file(fotoDniFile)
-                        .with(req -> {
-                            req.setMethod("PUT");
-                            return req;
-                        })
-                )
+                        .with(req -> { req.setMethod("PUT"); return req; }))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.dni").value("87654321B"))
+                .andExpect(jsonPath("$.fotoDni").value("fotoActualizada.jpg"))
                 .andExpect(jsonPath("$.direccionEnvio").value("Calle B"));
 
-        verify(clienteService, times(1)).updateCliente(eq(1L), any(ClienteRequest.class));
+        verify(storageService).store(any());
+        verify(clienteService).updateCliente(eq(1L), any());
     }
-
-
 
     @Test
     void testDeleteCliente() {
         doNothing().when(clienteService).deleteCliente(1L);
 
-        ResponseEntity<Void> response = clienteController.deleteCliente(1L);
+        var response = clienteController.deleteCliente(1L);
 
         assertEquals(204, response.getStatusCodeValue());
         verify(clienteService).deleteCliente(1L);
@@ -164,22 +165,23 @@ class ClienteControllerTest {
 
     @Test
     void testDeleteClienteNotFound() {
-        doThrow(new NoSuchElementException("Cliente no encontrado")).when(clienteService).deleteCliente(100L);
+        doThrow(new NoSuchElementException("Cliente no encontrado"))
+                .when(clienteService).deleteCliente(100L);
 
-        NoSuchElementException exception = assertThrows(NoSuchElementException.class, () -> {
-            clienteController.deleteCliente(100L);
-        });
+        var ex = assertThrows(NoSuchElementException.class,
+                () -> clienteController.deleteCliente(100L));
 
-        assertEquals("Cliente no encontrado", exception.getMessage());
+        assertEquals("Cliente no encontrado", ex.getMessage());
         verify(clienteService).deleteCliente(100L);
     }
 
     @Test
     void testComprarProducto() throws Exception {
         Long clienteId = 1L;
-        CompraRequest request = new CompraRequest("Producto de prueba", 2, clienteId);
 
-        PedidoResponse pedidoResponseMock = PedidoResponse.builder()
+        CompraRequest request = new CompraRequest("Producto Prueba", 2, null, null);
+
+        PedidoResponse pedidoMock = PedidoResponse.builder()
                 .id(1L)
                 .clienteId(clienteId)
                 .estado(EstadoPedido.PENDIENTE)
@@ -187,57 +189,47 @@ class ClienteControllerTest {
                 .lineasVenta(Collections.emptyList())
                 .build();
 
-        when(pedidoService.crearCompraDesdeNombreProducto(any(CompraRequest.class)))
-                .thenReturn(pedidoResponseMock);
-
-        String requestJson = new ObjectMapper().writeValueAsString(request);
+        when(pedidoService.crearCompraDesdeNombreProducto(any())).thenReturn(pedidoMock);
 
         mockMvc.perform(post("/api/clientes/{id}/comprar", clienteId)
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content(requestJson))
+                        .content(mapper.writeValueAsString(request)))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.id").value(1L))
                 .andExpect(jsonPath("$.clienteId").value(clienteId))
-                .andExpect(jsonPath("$.estado").value("PENDIENTE"))
-                .andExpect(jsonPath("$.fecha").exists())
-                .andExpect(jsonPath("$.lineasVenta").isArray())
-                .andExpect(jsonPath("$.lineasVenta.length()").value(0));
+                .andExpect(jsonPath("$.estado").value("PENDIENTE"));
 
-        verify(pedidoService).crearCompraDesdeNombreProducto(any(CompraRequest.class));
+        verify(pedidoService).crearCompraDesdeNombreProducto(any());
     }
-
 
     @Test
     void testGetPedidosByCliente() throws Exception {
         Long clienteId = 1L;
 
-        List<PedidoResponse> pedidosMock = Arrays.asList(
+        List<PedidoResponse> pedidos = Arrays.asList(
                 PedidoResponse.builder()
                         .id(1L)
                         .clienteId(clienteId)
                         .estado(EstadoPedido.PENDIENTE)
                         .fecha(LocalDateTime.now())
-                        .lineasVenta(Collections.emptyList())
+                        .lineasVenta(List.of())
                         .build(),
                 PedidoResponse.builder()
                         .id(2L)
                         .clienteId(clienteId)
                         .estado(EstadoPedido.ENVIADO)
                         .fecha(LocalDateTime.now())
-                        .lineasVenta(Collections.emptyList())
+                        .lineasVenta(List.of())
                         .build()
         );
 
-        when(pedidoService.getPedidosByClienteId(clienteId)).thenReturn(pedidosMock);
+        when(pedidoService.getPedidosByClienteId(clienteId))
+                .thenReturn(pedidos);
 
         mockMvc.perform(get("/api/clientes/{id}/mispedidos", clienteId))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$[0].id").value(1L))
                 .andExpect(jsonPath("$[0].estado").value("PENDIENTE"))
-                .andExpect(jsonPath("$[1].id").value(2L))
                 .andExpect(jsonPath("$[1].estado").value("ENVIADO"));
 
         verify(pedidoService).getPedidosByClienteId(clienteId);
     }
-
 }
