@@ -2,12 +2,12 @@ package examen.dev.tfgalmacen.rest.users.service;
 
 import examen.dev.tfgalmacen.auth.exceptions.UserNotFound;
 import examen.dev.tfgalmacen.rest.trabajadores.repository.TrabajadorRepository;
+import examen.dev.tfgalmacen.rest.users.UserRole;
 import examen.dev.tfgalmacen.rest.users.dto.UserRequest;
 import examen.dev.tfgalmacen.rest.users.dto.UserResponse;
 import examen.dev.tfgalmacen.rest.users.mapper.UserMapper;
 import examen.dev.tfgalmacen.rest.users.models.User;
 import examen.dev.tfgalmacen.rest.users.repository.UserRepository;
-import examen.dev.tfgalmacen.rest.users.UserRole;
 import examen.dev.tfgalmacen.websockets.notifications.EmailService;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -26,41 +26,55 @@ public class UserServiceImplTest {
     @Mock
     private UserMapper userMapper;
 
-    private UserServiceImpl userService;
-
     @Mock
     private EmailService emailService;
 
     @Mock
     private TrabajadorRepository trabajadorRepository;
 
+    private UserServiceImpl userService;
 
     @BeforeEach
     public void setUp() {
         MockitoAnnotations.openMocks(this);
-        userService = new UserServiceImpl(userRepository, userMapper, emailService, trabajadorRepository);
+        userService = new UserServiceImpl(userRepository, userMapper, emailService,
+                null, null, trabajadorRepository); // passwordEncoder y repositorios opcionales para tests
     }
 
     @Test
     public void testGetAllUsers() {
-        Set<UserRole> roles = new HashSet<>(Arrays.asList(UserRole.ADMIN, UserRole.CLIENTE));
+        Set<UserRole> roles = Set.of(UserRole.ADMIN, UserRole.CLIENTE);
+
         User user1 = User.builder().id(1L).nombre("Juan Pérez").correo("juan.perez@example.com").roles(roles).build();
         User user2 = User.builder().id(2L).nombre("Ana Gómez").correo("ana.gomez@example.com").roles(roles).build();
-        List<User> users = Arrays.asList(user1, user2);
+
+        List<User> users = List.of(user1, user2);
 
         when(userRepository.findAll()).thenReturn(users);
 
-        UserResponse userResponse1 = new UserResponse(1L, "Juan Pérez", "juan.perez@example.com", roles);
-        UserResponse userResponse2 = new UserResponse(2L, "Ana Gómez", "ana.gomez@example.com", roles);
+        UserResponse userResponse1 = UserResponse.builder()
+                .id(1L)
+                .nombre("Juan Pérez")
+                .correo("juan.perez@example.com")
+                .roles(roles)
+                .build();
+
+        UserResponse userResponse2 = UserResponse.builder()
+                .id(2L)
+                .nombre("Ana Gómez")
+                .correo("ana.gomez@example.com")
+                .roles(roles)
+                .build();
+
         when(userMapper.toDto(user1)).thenReturn(userResponse1);
         when(userMapper.toDto(user2)).thenReturn(userResponse2);
 
-        List<UserResponse> userResponses = userService.getAllUsers();
+        List<UserResponse> result = userService.getAllUsers();
 
-        assertNotNull(userResponses);
-        assertEquals(2, userResponses.size());
-        assertEquals(userResponse1, userResponses.get(0));
-        assertEquals(userResponse2, userResponses.get(1));
+        assertNotNull(result);
+        assertEquals(2, result.size());
+        assertEquals(userResponse1, result.get(0));
+        assertEquals(userResponse2, result.get(1));
 
         verify(userRepository, times(1)).findAll();
         verify(userMapper, times(1)).toDto(user1);
@@ -69,9 +83,16 @@ public class UserServiceImplTest {
 
     @Test
     public void testGetUserById_UserFound() {
-        Set<UserRole> roles = new HashSet<>(Arrays.asList(UserRole.ADMIN, UserRole.CLIENTE));
+        Set<UserRole> roles = Set.of(UserRole.ADMIN, UserRole.CLIENTE);
+
         User user = User.builder().id(1L).nombre("Juan Pérez").correo("juan.perez@example.com").roles(roles).build();
-        UserResponse userResponse = new UserResponse(1L, "Juan Pérez", "juan.perez@example.com", roles);
+
+        UserResponse userResponse = UserResponse.builder()
+                .id(1L)
+                .nombre("Juan Pérez")
+                .correo("juan.perez@example.com")
+                .roles(roles)
+                .build();
 
         when(userRepository.findById(1L)).thenReturn(Optional.of(user));
         when(userMapper.toDto(user)).thenReturn(userResponse);
@@ -86,7 +107,7 @@ public class UserServiceImplTest {
     }
 
     @Test
-    public void testGetUserByIdUserNotFound() {
+    public void testGetUserById_UserNotFound() {
         when(userRepository.findById(1L)).thenReturn(Optional.empty());
 
         assertThrows(UserNotFound.class, () -> userService.getUserById(1L));
@@ -97,10 +118,28 @@ public class UserServiceImplTest {
 
     @Test
     public void testCreateUser() {
-        Set<UserRole> roles = new HashSet<>(Arrays.asList(UserRole.ADMIN, UserRole.CLIENTE));
-        UserRequest userRequest = new UserRequest("Juan Pérez", "juan.perez@example.com", "password123", roles);
-        User user = User.builder().id(1L).nombre("Juan Pérez").correo("juan.perez@example.com").roles(roles).build();
-        UserResponse userResponse = new UserResponse(1L, "Juan Pérez", "juan.perez@example.com", roles);
+        Set<UserRole> roles = Set.of(UserRole.ADMIN, UserRole.CLIENTE);
+
+        UserRequest userRequest = UserRequest.builder()
+                .nombre("Juan Pérez")
+                .correo("juan.perez@example.com")
+                .password("password123")
+                .roles(roles)
+                .build();
+
+        User user = User.builder()
+                .id(1L)
+                .nombre("Juan Pérez")
+                .correo("juan.perez@example.com")
+                .roles(roles)
+                .build();
+
+        UserResponse userResponse = UserResponse.builder()
+                .id(1L)
+                .nombre("Juan Pérez")
+                .correo("juan.perez@example.com")
+                .roles(roles)
+                .build();
 
         when(userMapper.toEntity(userRequest)).thenReturn(user);
         when(userRepository.save(user)).thenReturn(user);
@@ -118,8 +157,14 @@ public class UserServiceImplTest {
 
     @Test
     public void testUpdateUser() {
-        Set<UserRole> roles = new HashSet<>(Arrays.asList(UserRole.ADMIN, UserRole.CLIENTE));
-        UserRequest userRequest = new UserRequest("Juan Pérez Actualizado", "juan.perez.updated@example.com", "newpassword123", roles);
+        Set<UserRole> roles = Set.of(UserRole.ADMIN, UserRole.CLIENTE);
+
+        UserRequest userRequest = UserRequest.builder()
+                .nombre("Juan Pérez Actualizado")
+                .correo("juan.perez.updated@example.com")
+                .password("newpassword123")
+                .roles(roles)
+                .build();
 
         User user = User.builder()
                 .id(1L)
@@ -128,33 +173,43 @@ public class UserServiceImplTest {
                 .roles(roles)
                 .build();
 
-        UserResponse userResponse = new UserResponse(1L, "Juan Pérez Actualizado", "juan.perez.updated@example.com", roles);
+        UserResponse userResponse = UserResponse.builder()
+                .id(1L)
+                .nombre("Juan Pérez Actualizado")
+                .correo("juan.perez.updated@example.com")
+                .roles(roles)
+                .build();
 
         when(userRepository.findById(1L)).thenReturn(Optional.of(user));
-
-        when(userMapper.toDto(user)).thenReturn(userResponse);
-
-        doNothing().when(userMapper).updateUserFromRequest(user, userRequest);
+        doAnswer(invocation -> {
+            user.setNombre(userRequest.getNombre());
+            user.setCorreo(userRequest.getCorreo());
+            return null;
+        }).when(userMapper).updateUserFromRequest(user, userRequest);
 
         when(userRepository.save(user)).thenReturn(user);
+        when(userMapper.toDto(user)).thenReturn(userResponse);
 
         UserResponse result = userService.updateUser(1L, userRequest);
 
         assertNotNull(result);
-
         assertEquals(userResponse, result);
 
         verify(userRepository, times(1)).findById(1L);
-        verify(userMapper, times(1)).updateUserFromRequest(user, userRequest);
         verify(userRepository, times(1)).save(user);
         verify(userMapper, times(1)).toDto(user);
     }
 
-
     @Test
     public void testDeleteUser() {
-        Set<UserRole> roles = new HashSet<>(Arrays.asList(UserRole.ADMIN, UserRole.CLIENTE));
-        User user = User.builder().id(1L).nombre("Juan Pérez").correo("juan.perez@example.com").roles(roles).build();
+        Set<UserRole> roles = Set.of(UserRole.ADMIN, UserRole.CLIENTE);
+
+        User user = User.builder()
+                .id(1L)
+                .nombre("Juan Pérez")
+                .correo("juan.perez@example.com")
+                .roles(roles)
+                .build();
 
         when(userRepository.findById(1L)).thenReturn(Optional.of(user));
 
